# tss

./: Cargo.toml  README.md  evals.md  package-lock.json  package.json
.github/workflows/: cargo-publish.yml  npm-publish.yml
docs/: command-compatibility.md  development-rules.md  mvp-scope.md  privacy.md  trust-contract.md
docs/journals/: 260605-2118-build-tss-plan.md
npm/: checksums.json  postinstall.js
packaging/homebrew/: tss.rb.template
plans/260605-2118-build-tss/: phase-01-define-trust-contract-and-product-scope.md  phase-02-scaffold-core-cli-architecture.md  phase-03-implement-safe-filter-engine-and-raw-store.md  phase-04-build-mvp-command-adapters.md  phase-05-install-agent-integrations.md  phase-06-add-analytics-and-privacy-controls.md  phase-07-create-verification-harness-and-release-pipeline.md  phase-08-write-launch-documentation.md  plan.md
plans/260607-1912-v0.1.02-rtk-coexistence/: plan.md
src/: main.rs
src/analytics/: ledger.rs  mod.rs  parity.rs  token_estimate.rs
src/cli/: mod.rs
src/core/: command.rs  envelope.rs  filter_engine.rs  mod.rs  policy.rs  raw_store.rs  runner.rs  shell.rs
src/filters/: files.rs  git.rs  go.rs  js.rs  mod.rs  python.rs  rust.rs  search.rs
src/integrations/: additional.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  installer.rs  mod.rs  opencode.rs
src/privacy/: mod.rs  permissions.rs  redaction.rs
tests/contracts/: cli_foundation.rs  filter_git_files_search.rs  filter_test_runners.rs  integrations_contract.rs  packaging.rs  privacy.rs  raw_store.rs  safety_gate.rs
(+49 files in other folders)
